Fixing index p color and about p color and text aligning

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,11 @@ input[type=submit]:hover {
 }
 .lead
 {
+	text-align: left;
+	color: black;
+}
+.lead1
+{
 	text-align: center;
 	color: white;
 }
